# agent-token-optimiser

./: README.md  pyproject.toml
src/agent_token_guard/: __init__.py  cli.py  compressor.py  doctor.py  indexer.py  memory.py  metrics.py
src/agent_token_guard/adapters/: __init__.py  claude.py  codex.py  common.py  platforms.py
tests/: test_adapters.py  test_compressor.py  test_doctor.py  test_indexer.py  test_memory.py  test_metrics.py
