[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-token-guard"
version = "0.1.0"
description = "Reduce LLM agent session token waste through smart memory, indexing, and output compression"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["llm", "ai", "tokens", "claude", "codex", "optimization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "tiktoken>=0.7.0",
    "gitpython>=3.1.0",
]

[project.scripts]
atg = "agent_token_guard.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_token_guard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
